--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
 </head>
 
 <body>
-  <section>
+  <main>
     <div class="card-qr">
       <img src="images/image-qr-code.png" class="imagem-qr" alt="iamgem qr code para scanear">
-      <h3>Improve your front-end skills by building projects</h3>
+      <h1>Improve your front-end skills by building projects</h1>
 
       <p> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
-
+  </main>
+  <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://github.com/santosfer" target="_blank">Fernanda Santos</a>.
     </div>
-  </section>
+  </footer>
 </body>
 
 </html>
